host_ws/log/build_2026-03-10_10-47-46/roboclaw_hardware/stderr.log
/host_ws/src/roboclaw_hardware/src/unit_converter.cpp: In member function ‘int16_t roboclaw_hardware::UnitConverter::rad_per_sec_to_duty(double, double) const’:
/host_ws/src/roboclaw_hardware/src/unit_converter.cpp:72:16: error: ‘clamp’ is not a member of ‘std’
   72 |   ratio = std::clamp(ratio, -1.0, 1.0);
      |                ^~~~~
gmake[2]: *** [CMakeFiles/roboclaw_hardware.dir/build.make:76: CMakeFiles/roboclaw_hardware.dir/src/unit_converter.cpp.o] Error 1
gmake[2]: *** Waiting for unfinished jobs....
/host_ws/src/roboclaw_hardware/src/roboclaw_hardware.cpp: In member function ‘virtual hardware_interface::CallbackReturn roboclaw_hardware::RoboClawHardware::on_init(const hardware_interface::HardwareInfo&)’:
/host_ws/src/roboclaw_hardware/src/roboclaw_hardware.cpp:133:51: warning: ‘virtual rclcpp_lifecycle::node_interfaces::LifecycleNodeInterface::CallbackReturn hardware_interface::HardwareComponentInterface::on_init(const hardware_interface::HardwareInfo&)’ is deprecated: Use on_init(const HardwareComponentInterfaceParams & params) instead. [-Wdeprecated-declarations]
  133 |   if (hardware_interface::SystemInterface::on_init(info) !=
      |       ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~^~~~~~
In file included from /opt/ros/jazzy/include/hardware_interface/hardware_interface/system_interface.hpp:18,
                 from /host_ws/src/roboclaw_hardware/include/roboclaw_hardware/roboclaw_hardware.hpp:9,
                 from /host_ws/src/roboclaw_hardware/src/roboclaw_hardware.cpp:1:
/opt/ros/jazzy/include/hardware_interface/hardware_interface/hardware_component_interface.hpp:140:26: note: declared here
  140 |   virtual CallbackReturn on_init(const HardwareInfo & hardware_info);
      |                          ^~~~~~~
/host_ws/src/roboclaw_hardware/src/roboclaw_hardware.cpp: In member function ‘void roboclaw_hardware::RoboClawHardware::initialize_state_interfaces()’:
/host_ws/src/roboclaw_hardware/src/roboclaw_hardware.cpp:470:58: warning: dangling pointer to ‘enc’ may be used [-Wdangling-pointer=]
  470 |     hw_state_pos_[0] = unit_converter_->counts_to_radians(enc.enc1);
      |                        ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~^~~~~~~~~~
/host_ws/src/roboclaw_hardware/src/roboclaw_hardware.cpp:468:8: note: ‘enc’ declared here
  468 |   auto enc = protocol_->GetEncoders(address_);
      |        ^~~
/host_ws/src/roboclaw_hardware/src/roboclaw_hardware.cpp:471:58: warning: dangling pointer to ‘enc’ may be used [-Wdangling-pointer=]
  471 |     hw_state_pos_[1] = unit_converter_->counts_to_radians(enc.enc2);
      |                        ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~^~~~~~~~~~
/host_ws/src/roboclaw_hardware/src/roboclaw_hardware.cpp:468:8: note: ‘enc’ declared here
  468 |   auto enc = protocol_->GetEncoders(address_);
      |        ^~~
gmake[1]: *** [CMakeFiles/Makefile2:159: CMakeFiles/roboclaw_hardware.dir/all] Error 2
gmake[1]: *** Waiting for unfinished jobs....
gmake: *** [Makefile:146: all] Error 2
